[package]
name = "bitcoin_puzzle_solver"
version = "2.0.0"
edition = "2021"
authors = ["Bitcoin Puzzle Solver Team"]
description = "Advanced Bitcoin puzzle solver with multiple optimization algorithms"

[dependencies]
# Cryptographie Bitcoin
bitcoin = { version = "0.32", features = ["rand-std", "secp-recovery"] }

# Arithmétique grande précision
ibig = "0.3"

# Génération de nombres aléatoires
rand = { version = "0.8", features = ["small_rng"] }

# Parallélisation
rayon = "1.8"

# Détection du nombre de CPUs
num_cpus = "1.16"

# Hashing rapide
blake3 = "1.5"

# Sérialisation efficace
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Structure de données optimisées
hashbrown = "0.14"
bitvec = "1.0"

# Algorithmes cryptographiques supplémentaires
sha2 = "0.10"
ripemd = "0.1"

# Requêtes HTTP
reqwest = { version = "0.11.23", features = ["json", "blocking"] }
tokio = { version = "1.32.0", features = ["full"] }

# Gestion des dates et heures
chrono = { version = "0.4", features = ["serde"] }

# Mesure de performance
criterion = { version = "0.5", optional = true }

# Optimisations de compilation
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false
debug = false
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Configuration pour les benchmarks
[features]
default = []
benchmark = ["criterion"]

[[bench]]
name = "solver_bench"
harness = false
required-features = ["benchmark"]